# pytest-section

./: .env.example  .gitignore  .test.env.example  README.md  coverage.txt  main.py  pyproject.toml
app/: api.py  config.py  crud.py  db.py  main.py  schemas.py  tasks.py  validators.py
tests/: conftest.py  test_api.py  test_crud.py  test_schemas.py  test_validators.py
tests/fixtures/: data.py
